--- a/js/index.html
+++ b/js/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,200">
-    <title>Tic-Tac-Toe</title>
+	<title>Tic-Tac-Toe</title>
 </head>
 <body>
+	<div class="controls">
+		<svg viewBox="0 0 450 60">
+			<text x="50" y="50" class="outline">Tic•Tac•Toe</text>
+			<text x="50" y="50">Tic•Tac•Toe</text>
+		</svg>
+	</div>
 	<script src="./script.js"></script>
 </body>
 </html>
