Impl. botão de novo jogo + display de turno

--- a/js/index.html
+++ b/js/index.html
@@ -15,6 +15,10 @@
 			<text x="50" y="50" class="outline">Tic•Tac•Toe</text>
 			<text x="50" y="50">Tic•Tac•Toe</text>
 		</svg>
+		<div>
+			<div class="turn hidden"></div>
+			<button class="new-game">new game</button>
+		</div>
 	</div>
 	<script src="./script.js"></script>
 </body>
