Impl. painél de customização

--- a/js/index.html
+++ b/js/index.html
@@ -19,6 +19,19 @@
 			<div class="turn hidden"></div>
 			<button class="new-game">new game</button>
 		</div>
+		<div class="customize">
+			<div>
+				<label for="bg-color">
+					<input type="color" class="color-picker" id="bg-color" value="#292929">
+					background
+				</label>
+				<label for="board-color">
+					<input type="color" class="color-picker" id="board-color" value="#969696">
+					board
+				</label>
+			</div>
+			<button class="reset">reset</button>
+		</div>
 	</div>
 	<script src="./script.js"></script>
 </body>
