Impl. tabuleiro e células

--- a/js/index.html
+++ b/js/index.html
@@ -33,6 +33,17 @@
 			<button class="reset">reset</button>
 		</div>
 	</div>
+	<div class="board">
+		<div class="cell row-1 column-1 diagonal-1"></div>
+		<div class="cell row-1 column-2"></div>
+		<div class="cell row-1 column-3 diagonal-2"></div>
+		<div class="cell row-2 column-1"></div>
+		<div class="cell row-2 column-2 diagonal-1 diagonal-2"></div>
+		<div class="cell row-2 column-3"></div>
+		<div class="cell row-3 column-1 diagonal-2"></div>
+		<div class="cell row-3 column-2"></div>
+		<div class="cell row-3 column-3 diagonal-1"></div>
+	</div>
 	<script src="./script.js"></script>
 </body>
 </html>
